# fractals

./: .gitignore  CMakeLists.txt  README.md  cppcheck-ignore.txt
src/: Application.cpp  Application.h  Mandelbrot.cpp  Mandelbrot.h  Mandlebrot.cpp  Mandlebrot.h  main.cpp
